--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,5 +1,5 @@
 tinylog.level = trace
-tinylog.writer = console
-tinylog.writer.filename = /src/main/resource/booker.log
+tinylog.writer = file
+tinylog.writer.filename = message.log
 tinylog.writer.level = info
 tinylog.writer.append = false
