--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Created by https://www.gitignore.io/api/maven,eclipse,netbeans,intellij
 
+# Logger file
+message.log
+
 ### Eclipse ###
 
 .metadata
